[package]
name = "logitech-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = "0.1.3"
enum_dispatch = "0.3.12"
evdev = { version = "0.12.1", features = [ "tokio", ] }
notify-rust = "4.10.0"
once_cell = "1.18.0"
tokio = { version = "1.34.0", features = [ "macros", "rt-multi-thread" ] }
